# ethereum-bot

./: .gitignore  .pre-commit-config.yaml  alembic.ini  config.example.toml  pyproject.toml  requirements-dev.txt  requirements.txt
migrations/: env.py
migrations/versions/: 6e1e5012484d_added_lines_table.py  a2ae0ffede43_init.py
src/: __main__.py  config.py
src/bot/handlers/: __init__.py  add_line.py  check_balance.py  lines.py  rules.py  start.py
src/bot/keyboads/: rules.py  start.py
src/bot/middlewares/: __init__.py  database.py  rules.py  user_object.py
src/bot/states/: add_line.py  check_balance.py
src/database/: __init__.py
src/database/models/: __init__.py  line.py  user.py
src/database/repositories/: __init__.py  base.py  line.py  user.py
src/database/services/: __init__.py  line.py  user.py
src/database/usecases/: line.py  user.py
src/infrastructure/: ethereum.py  mnemonic.py
